# pdf-fill

./: .mcp.json  Dockerfile  fly.toml  pyproject.toml
docs/superpowers/plans/: 2026-03-17-document-intelligence.md
src/pdf_fill/: __init__.py  analysis.py  drawing.py  export.py  renderer.py  server.py  state.py  structure.py  utils.py
tests/: conftest.py  test_analysis.py  test_drawing.py  test_export.py  test_export_quality.py  test_renderer.py  test_state.py  test_structure.py
